# data-structures-assign1

./: CMakeLists.txt  LICENSE  README.md  Student.cpp  Student.h  fileReadAndWrite.cpp  fileReadAndWrite.h  main.cpp  readFile.cpp  readFile.h  sortingAlgorithms.cpp  sortingAlgorithms.h  students.txt
