cmake_minimum_required(VERSION 3.24)

project(data-structures-assign-1)

set(CMAKE_CXX_STANDARD 17)

add_executable(data-structures-assign1 main.cpp)
add_executable(data-structures-assign1 Student.cpp)
add_executable(data-structures-assign1 Student.h)
add_executable(data-structures-assign1 sortingAlgorithms.cpp)